<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (c) 2010-2012, Code Aurora Forum. All rights reserved.
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Begin: Modified by xiepengfei for contact menu 2012/03/20 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit"
        android:alphabeticShortcut="e"
        android:icon="@drawable/ic_menu_compose_holo_dark"
        android:title="@string/menu_editContact"/>

    <item
        android:id="@+id/menu_edit2"
        android:alphabeticShortcut="e"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_compose_holo_dark"
        android:title="@string/menu_editContact"/>

<!--
    <item
        android:id="@+id/menu_share"
        android:alphabeticShortcut="s"
        android:icon="@drawable/ic_menu_share_holo_light"
        android:title="@string/menu_share"/>
 -->
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_menu_trash_holo_light"
        android:title="@string/menu_deleteContact"/>
    <item
        android:id="@+id/menu_set_ringtone"
        android:icon="@drawable/ic_menu_mark"
        android:title="@string/menu_set_ring_tone"/>

<!-- Begin: Modified by xiepengfei for delete superabundance menu 2012/05/23 -->
    <!-- <item
        android:id="@+id/menu_send_via_sms"
        android:icon="@drawable/ic_menu_mark"
        android:title="@string/menu_sendViaSMS" /> -->
<!-- End: Modified by xiepengfei for delete superabundance menu 2012/05/23 -->

    <item
        android:id="@+id/menu_send_to_voicemail"
        android:checkable="true"
        android:icon="@drawable/sent_message"
        android:title="@string/menu_redirect_calls_to_vm"
        android:visible="false" />
</menu>
<!-- End: Modified by xiepengfei for contact menu 2012/03/20 -->