<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Begin: Modified by xiepengfei for add two menu 2012/04/25 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_done"
        android:alphabeticShortcut="\n"
        android:showAsAction="always" />

    <item
        android:id="@+id/menu_split"
        android:icon="@drawable/ic_menu_split_holo_light"
        android:title="@string/menu_splitAggregate" />

    <item
        android:id="@+id/menu_join"
        android:icon="@drawable/ic_menu_merge_holo_light"
        android:title="@string/menu_joinAggregate" />
    <!--Begin: Modified by siliangqi for menu_icon 2011-6-6-->
    <item
        android:id="@+id/menu_discard"
        android:alphabeticShortcut="q"
        android:icon="@drawable/ic_menu_trash_holo_light"
        android:title="@string/menu_discard" />
    <!--End: Modified by siliangqi for menu_icon 2011-6-6-->
<!--     <item android:id="@+id/menu_editor_complete"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_complete"
        android:title="@string/complete"></item>
    <item android:id="@+id/menu_editor_cancel"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_cancel"
        android:title="@string/cancel"></item> -->

</menu>
<!-- End: Modified by xiepengfei for add two menu 2012/04/25 -->