<?xml version="1.0" encoding="utf-8"?>
<!-- Begin: Modified by xiepengfei for history delete activity 2012/05/18 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_detail_profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/contact_black_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="413dip"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/contact_detail_history_headview"
            android:layout_width="match_parent"
            android:layout_height="64dip"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dip"
            android:text="@string/select_all"
            android:textColor="@color/contact_list_separator_text_color"/>

        <CheckBox
            android:id="@+id/contact_detail_history_check_all_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="213dip" />
    </LinearLayout>

    <ListView
        android:id="@+id/contact_detail_profile_or_log_list"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/contact_black_color"
        android:divider="@null"
        android:fadingEdge="none" />

    <ScrollView
        android:id="@+id/contact_detail_profile_or_log_scrollview"
        android:layout_width="match_parent"
        android:layout_height="600px"
        android:background="@color/contact_black_color"
        android:fadingEdge="none"
        android:visibility="gone" >

        <!-- Begin: bxinchun 2012-07-14 modified code. -->
        <TextView
            android:id="@+id/contact_detail_profile_or_log_emptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/noitems_text_based"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="0.92"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:text="@string/no_contact_details_history"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />
        <!--
            android:textColor="#FFFFFF"
         -->
        <!-- End: bxinchun 2012-07-14 modified code. -->
    </ScrollView>

    <LinearLayout
        android:id="@+id/contact_detail_history_tools_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/contact_black_color"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/contact_detail_history_complete"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dip"
            android:text="@string/complete" />

        <Button
            android:id="@+id/contact_detail_history_cancel"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dip"
            android:text="@string/cancel" />
    </LinearLayout>

    </LinearLayout>

</LinearLayout>
<!-- End: Modified by xiepengfei for history delete activity 2012/05/18 -->