<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Begin: Modified by xiepengfei for modify the GroupBrowseListFragment bg color 2012/05/26 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_black_color"
    android:orientation="vertical">
<!-- End: Modified by xiepengfei for modify the GroupBrowseListFragment bg color 2012/05/26 -->

    <!-- See group_browse_list_item.xml for the reason for the transparent android:listSelector -->
<!-- Begin: Modified by xiepengfei for midify the list layout 2012/05/25 -->
<!-- Begin: Modified by sunrise for midify the list height 2012/08/15 -->
    <view
      android:id="@+id/list"
      class="com.android.contacts.widget.AutoScrollListView"
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:scrollbarStyle="outsideOverlay"
      android:layout_weight="1"
      android:fadingEdge="none"
      android:cacheColorHint="@android:color/transparent"
      android:dividerHeight="1px"
      android:divider="@drawable/list_bg_contact"
      android:listSelector="@android:color/transparent"/>
          <!-- android:paddingLeft="16dip"
      android:paddingRight="16dip" -->
      <!-- android:divider="@null" -->
<!-- End:  Modified by sunrise for midify the list height 2012/08/15 -->
<!-- End: Modified by xiepengfei for midify the list layout 2012/05/25 -->

    <TextView
        android:id="@+id/empty"
        android:layout_marginTop="@dimen/empty_message_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/textColorSecondary"
        android:text="@string/noGroups" />

    <LinearLayout
      android:id="@+id/add_accounts"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/no_accounts_message_margin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondary"
        android:text="@string/noAccounts" />

      <Button
        android:id="@+id/add_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contacts_unavailable_add_account" />

    </LinearLayout>
</LinearLayout>
